--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,5 +12,6 @@ dependencies = [
     "flask-mail>=0.10.0",
     "flask-migrate>=4.1.0",
     "flask-sqlalchemy>=3.1.1",
+    "pyjwt>=2.10.1",
     "python-dotenv>=1.2.1",
 ]
