--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,5 +10,7 @@ dependencies = [
     "flask-login>=0.6.3",
     "flask-mail>=0.10.0",
     "flask-sqlalchemy>=3.1.1",
+    "paychangu>=0.0.3",
+    "pyjwt>=2.10.1",
     "python-dotenv>=1.2.1",
 ]
