--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "flask-cors>=6.0.1",
     "flask-login>=0.6.3",
     "flask-mail>=0.10.0",
+    "flask-migrate>=4.1.0",
     "flask-sqlalchemy>=3.1.1",
     "paychangu>=0.0.3",
     "pyjwt>=2.10.1",
