--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "flask-migrate>=4.1.0",
     "flask-sqlalchemy>=3.1.1",
     "paychangu>=0.0.3",
+    "pillow>=12.0.0",
     "pyjwt>=2.10.1",
     "python-dotenv>=1.2.1",
+    "qrcode[pil]>=8.2",
+    "redis>=7.0.1",
 ]
