--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "paychangu>=0.0.3",
     "pillow>=12.0.0",
     "pyjwt>=2.10.1",
+    "python-dateutil>=2.9.0.post0",
     "python-dotenv>=1.2.1",
     "qrcode[pil]>=8.2",
     "redis>=7.0.1",
